--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mi Ecommerce</title>
+    <link rel="stylesheet" href="assets\css\styles.css" />
+  </head>
+  <body>
+    <div class="grid-container">
+      <header class="navbar">
+        <p>Mi Ecommerce<p>
+      </header>
+      <menu>
+        <div class="sidebar">
+          <h3>Categorías</h3>
+          <p>Perfumes <span style="color: #575757;">(13)</span></p>
+          <p>Ropa <span style="color: #575757;">(21)</span></p>
+          <p>Accesorios <span style="color: #575757;">(41)</span></p>
+          <p>Zapatos <span style="color: #575757;">(10)</span></p>
+        </div>
+      </menu>
+      <main class="grid-container2">
+        <div class="flex-container" style="grid-area: producto1;">
+          <img class="picture" src="assets\imgs\perfume.png" alt="perfume1">
+          <h2>Perfume myKingdom</h2>
+          <p class="price">31.400</p>
+          <div class="buybutton" style="background-color: #25527b;">
+            <p>Comprar</p>
+          </div>
+        </div>
+        <div class="flex-container" style="grid-area: producto2;">
+          <img class="picture" src="assets\imgs\perfume2.png" alt="perfume2">
+          <h2>Perfume Phantom</h2>
+          <p class="price">68.900</p>
+          <div class="buybutton" style="background-color: #25527b;">
+            <p>Comprar</p>
+          </div>
+        </div>
+        <div class="flex-container" style="grid-area: producto3;">
+          <img class="picture" src="assets\imgs\zapatos.png" alt="zapatos">
+          <h2>Zapatos Docker</h2>
+          <p class="price">29.700</p>
+          <div class="buybutton" style="background-color: #25527b;">
+            <p>Comprar</p>
+          </div>
+        </div>
+        <div class="flex-container" style="grid-area: producto4;">
+          <img class="picture" src="assets\imgs\poleron.png" alt="poleron">
+          <h2>Poleron Puma</h2>
+          <p class="price">44.700</p>
+          <div class="buybutton" style="background-color: #25527b;">
+            <p>Comprar</p>
+          </div>
+        </div>
+      </main>
+      <footer>
+        <div class="footer">
+          <p>@miecommerce</p>
+        </div>  
+      </footer>
+    </div>
+  </body>
+</html>
